Revert "Fix long links causing horizontal scrolling on small screens (#761)"
This reverts commit e72f4236be8389fe6bcecd608771ab1f64e01a94.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -917,7 +917,6 @@ is the very first element in the post content */
 .gh-content a {
     color: var(--ghost-accent-color);
     text-decoration: underline;
-    word-break: break-word;
 }
 
 .gh-content > blockquote,
